--- a/src/styles/_sizes.scss
+++ b/src/styles/_sizes.scss
@@ -8,3 +8,4 @@ $border-stroke-width-difference: $border-thick-stroke-width - $border-thin-strok
 $option-icon: 2.8em;
 $minimum-auto-scaling-size: 901px;
 $scaling-interval: 300px;
+$button-size: 4rem;
