--- a/src/styles/h5p-multi-media-choice.scss
+++ b/src/styles/h5p-multi-media-choice.scss
@@ -162,31 +162,43 @@
     width: 1px;
   }
 
-  .h5p-multi-media-content-media-button-video{
+  .h5p-multi-media-video-button {
     font-family: 'H5PFontAwesome4';
     position: absolute;
-    background-color: crimson;
-    z-index: 3;
+    background-color: #E23232;
+    z-index: 1;
     bottom: 0;
     right: 0;
     margin: 0.5em;
-    width: 3em;
-    height: 3em;
+    width: $button-size;
+    height: $button-size;
     display: flex;
     align-items: center;
     justify-content: center;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
     cursor: pointer;
     color: #ffffff;
-    border: 1px solid white;
-    border-radius: 1.5em;
+    border: 2px solid white;
+    border-radius: math.div($button-size, 2);
+
+    &:hover {
+      background-color: #C51D1D;
+    }
+
+    .play-icon {
+      width: 2.5rem;
+      height: 2.5rem;
+      background-image: url(../../assets/play.svg);
+      background-repeat: no-repeat;
+      background-size: 1.8rem;
+      background-position: 0.5rem;
+    }
   }
 
-  /* Modal for video player */
-  .h5p-multi-media-content-media-video-modal {
+  .h5p-multi-media-modal {
     position: absolute;
-    background-color:  rgba(0,0,0,0.8);
-    top:0;
+    background: #000000B2;
+    top: 0;
     left: 0;
     padding: 0;
     border: 1px solid #888;
@@ -197,94 +209,103 @@
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
     animation-name: animatetop;
     animation-duration: 0.4s;
-    display: none;
-    align-items: center;
-    justify-content: center;
-  }
-
-  .h5p-multi-media-content-media-video-modal-container {
-    position: relative;
-    width: 100%;
     display: flex;
-    justify-content: center;
     align-items: center;
-    max-width: 100%;
-    
+    justify-content: center;
+
+    .modal-container {
+      position: relative;
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      max-width: 100%;
+
+      .modal-content {
+        position: relative;
+        background-color: white;
+        padding: 1.2rem;
+        border: white;
+        width: 80%;
+        display: block;
+        max-width: 80%;
+        border-radius: 1%;
+        box-shadow: none;
+
+        .modal-close-button {
+          background-color: #ffffff;
+          position: absolute;
+          top: math.div($button-size, -3);
+          right: math.div($button-size, -3);
+          cursor: pointer;
+          border: none;
+          height: $button-size;
+          width: $button-size;
+          z-index: 1;
+          border-radius: 50%;
+          box-shadow: 0px 4px 4px 0px #00000040;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+
+          .icon-cross {
+            width: 4rem;
+            height: 4rem;
+            background-size: 3.5rem;
+            background-image: url(../../assets/x-close.svg);
+            background-repeat: no-repeat;
+            background-position: -0.1rem 0.2rem;
+          }
+        }
+      }
+    }
   }
 
-  .h5p-multi-media-content-media-video-modal-content {
-    position: relative;
-    background-color: white;
-    padding: 1em;
-    border: white;
-    width: 80%;
-    display: block;
-    max-width: 80%;
-    border-radius: 1%;
-    box-shadow: none;
+  .h5p-multi-media-content-media-video-player {
+          width: 100%;
   }
 
   .h5p-multi-media-choice-content {
     position: relative;
   }
 
-    /* modal Animation */
   @keyframes animatetop {
-    from {top: -300px; opacity: 0}
-    to {top: 0; opacity: 1}
+    from { top: -300px; opacity: 0 }
+    to { top: 0; opacity: 1 }
   }
 
-  .h5p-multi-media-content-media-video-player {
-    width: 100%;
-  }
-
-  .h5p-video{
+  .h5p-video {
     max-width: 100%;
   }
+
   .h5p-multi-media-content-audio-wrapper {
     position: absolute;
     bottom: 0;
     right: 0;
     margin: 0.5em;
-    z-index: 3;
+    z-index: 1;
+    
+    .h5p-audio-minimal-button {
+      width: $button-size;
+      height: $button-size;
+      border: 2px solid white;
+      background: #3239E2;
+
+      &:hover {
+        background: #1B21AD;
+        cursor: pointer;
+      }
+    }
+
+    .h5p-audio-minimal-button::before {
+      font-size: math.div($button-size, 2);
+    }
   }
 
-  .h5p-multi-media-content-audio-wrapper .h5p-audio-minimal-button{
-    width: 3.2em;
-    height: 3.2em;
-  }
-
-  .h5p-audio-wrapper:hover {
-    cursor: pointer;
-  }
-
-  button.h5p-multi-media-content-media-video-close{
-    background-color: #ffffff;
-    position: absolute;
-    top: -0.8em;
-    right: -0.8em;
-    cursor: pointer;
-    border: none;
-    padding: 5px;
-    font-size: 31px;
-    height: 1.8em;
-    width: 1.8em;
-    box-shadow: 0 2px 4px darkslategray;
-    z-index: 7;
-    border-radius: 50%;
-  }
-
-  .h5p-multi-media-content-media-button-video-centered{
+  .h5p-multi-media-content-media-button-centered {
     top: 50%;
     right: 50%;
-    margin-top: -1.5em;
-    margin-right: -1.5em;
-  }
-
-  .h5p-multi-media-content-media-button-audio-centered{
-    top: 50%;
-    right: 50%;
-    margin-top: -1.3em;
-    margin-right: -1.3em;
+    margin-top: math.div($button-size, -2);
+    margin-right: math.div($button-size, -2);
   }
 }
