--- a/src/styles/h5p-multi-media-choice.scss
+++ b/src/styles/h5p-multi-media-choice.scss
@@ -175,7 +175,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
     cursor: pointer;
     color: #ffffff;
     border: 2px solid white;
@@ -206,8 +205,7 @@
     overflow: hidden;
     width: 100%;
     height: 100%;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
-    animation-name: animatetop;
+    animation-name: animateModal;
     animation-duration: 0.4s;
     display: flex;
     align-items: center;
@@ -269,9 +267,9 @@
     position: relative;
   }
 
-  @keyframes animatetop {
-    from { top: -300px; opacity: 0 }
-    to { top: 0; opacity: 1 }
+  @keyframes animateModal {
+    from { opacity: 0 }
+    to { opacity: 1 }
   }
 
   .h5p-video {
