--- a/src/styles/h5p-multi-media-choice.scss
+++ b/src/styles/h5p-multi-media-choice.scss
@@ -218,6 +218,7 @@
       justify-content: center;
       align-items: center;
       max-width: 100%;
+      max-height: 100%;
 
       .modal-content {
         position: relative;
@@ -229,6 +230,7 @@
         max-width: 80%;
         border-radius: 1%;
         box-shadow: none;
+        max-height: 100%;
 
         .modal-close-button {
           background-color: #ffffff;
@@ -260,7 +262,7 @@
   }
 
   .h5p-multi-media-content-media-video-player {
-          width: 100%;
+          max-width: 100%;
   }
 
   .h5p-multi-media-choice-content {
