--- a/src/styles/h5p-multi-media-choice.scss
+++ b/src/styles/h5p-multi-media-choice.scss
@@ -161,4 +161,151 @@
     white-space: nowrap;
     width: 1px;
   }
+
+  .h5p-multi-media-video-button {
+    font-family: 'H5PFontAwesome4';
+    position: absolute;
+    background-color: #E23232;
+    z-index: 1;
+    bottom: 0;
+    right: 0;
+    margin: 0.5em;
+    width: $button-size;
+    height: $button-size;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    color: #ffffff;
+    border: 2px solid white;
+    border-radius: math.div($button-size, 2);
+
+    &:hover {
+      background-color: #C51D1D;
+    }
+
+    .play-icon {
+      width: 2.5rem;
+      height: 2.5rem;
+      background-image: url(../../assets/play.svg);
+      background-repeat: no-repeat;
+      background-size: 1.8rem;
+      background-position: 0.5rem;
+    }
+  }
+
+  .h5p-multi-media-modal {
+    position: absolute;
+    background: #000000B2;
+    top: 0;
+    left: 0;
+    padding: 0;
+    border: 1px solid #888;
+    z-index: 1;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    animation-name: animateModal;
+    animation-duration: 0.4s;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    .modal-container {
+      position: relative;
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      max-width: 100%;
+      max-height: 100%;
+
+      .modal-content {
+        position: relative;
+        background-color: white;
+        padding: 1.2rem;
+        border: white;
+        width: 80%;
+        display: block;
+        max-width: 80%;
+        border-radius: 1%;
+        box-shadow: none;
+        max-height: 100%;
+
+        .modal-close-button {
+          background-color: #ffffff;
+          position: absolute;
+          top: math.div($button-size, -3);
+          right: math.div($button-size, -3);
+          cursor: pointer;
+          border: none;
+          height: $button-size;
+          width: $button-size;
+          z-index: 1;
+          border-radius: 50%;
+          box-shadow: 0px 4px 4px 0px #00000040;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+
+          .icon-cross {
+            width: 4rem;
+            height: 4rem;
+            background-size: 3.5rem;
+            background-image: url(../../assets/x-close.svg);
+            background-repeat: no-repeat;
+            background-position: -0.1rem 0.2rem;
+          }
+        }
+      }
+    }
+  }
+
+  .h5p-multi-media-content-media-video-player {
+          max-width: 100%;
+  }
+
+  .h5p-multi-media-choice-content {
+    position: relative;
+  }
+
+  @keyframes animateModal {
+    from { opacity: 0 }
+    to { opacity: 1 }
+  }
+
+  .h5p-video {
+    max-width: 100%;
+  }
+
+  .h5p-multi-media-content-audio-wrapper {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    margin: 0.5em;
+    z-index: 1;
+    
+    .h5p-audio-minimal-button {
+      width: $button-size;
+      height: $button-size;
+      border: 2px solid white;
+      background: #3239E2;
+
+      &:hover {
+        background: #1B21AD;
+        cursor: pointer;
+      }
+    }
+
+    .h5p-audio-minimal-button::before {
+      font-size: math.div($button-size, 2);
+    }
+  }
+
+  .h5p-multi-media-content-media-button-centered {
+    top: 50%;
+    right: 50%;
+    margin-top: math.div($button-size, -2);
+    margin-right: math.div($button-size, -2);
+  }
 }
