--- a/src/styles/h5p-multi-media-choice.scss
+++ b/src/styles/h5p-multi-media-choice.scss
@@ -282,7 +282,7 @@
     right: 0;
     margin: 0.5em;
     z-index: 1;
-    
+
     .h5p-audio-minimal-button {
       width: $button-size;
       height: $button-size;
@@ -297,6 +297,13 @@
 
     .h5p-audio-minimal-button::before {
       font-size: math.div($button-size, 2);
+    }
+
+    /* Make H5P.Audio's play button icon match our video play button's icon */
+    .h5p-audio-minimal-play-paused::before {
+      position: relative;
+      left: 3px;
+      font-size: 2.125rem;
     }
   }
 
