--- a/src/styles/_sizes.scss
+++ b/src/styles/_sizes.scss
@@ -9,3 +9,4 @@ $option-icon: 2.8em;
 $minimum-auto-scaling-size: 901px;
 $scaling-interval: 300px;
 $button-size: 4rem;
+$button-size-small: 2.5rem;
