--- a/src/styles/h5p-multi-media-choice.scss
+++ b/src/styles/h5p-multi-media-choice.scss
@@ -167,6 +167,7 @@
     bottom: 0;
     right: 0;
     margin: 0.5em;
+    padding: 0;
     width: $button-size;
     height: $button-size;
     display: flex;
@@ -252,6 +253,7 @@
           display: flex;
           justify-content: center;
           align-items: center;
+          padding: 0;
 
           @container h5p-mmc-modal-container (width < 480px) {
             right: 0;
