--- a/src/styles/h5p-multi-media-choice.scss
+++ b/src/styles/h5p-multi-media-choice.scss
@@ -16,6 +16,7 @@
   }
 
   .h5p-multi-media-choice-list-item {
+    container-type: inline-size;
     padding: 0.75em 0 0.25em 0;
     &:focus {
       outline: none;
@@ -43,6 +44,12 @@
     border-radius: $border-radius;
     border-color: $color-option-background;
     padding: $option-padding-default;
+  }
+  
+  @container (max-width: 68px) {
+    .h5p-multi-media-choice-option {
+      padding: 0.25rem;
+    }
   }
 
   .h5p-multi-media-choice-media-wrapper {
