--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -6,17 +6,18 @@
   top: -0.35em;
   animation: slide-right-fade 0.25s forwards ease-out;
 
-  font-family: 'Material Icons';
+  font-family: 'h5p-theme';
   font-size: sizes.$option-icon;
   content: $icon;
   color: $color;
 
   // Creates the white background and border
-  background-color: #fff;
+  background-color: var(--h5p-theme-feedback-correct-secondary);
   border-radius: 50%;
   line-height: 1em;
+  border: solid 4px var(--h5p-theme-feedback-correct-secondary);
 
-  box-shadow: 7px 7px 5px #00000065;
+  box-shadow: 11px 11px 9px #00000065;
 
   z-index: 1;
 }
