setting up initial color, spacing and font variables

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,5 +1,5 @@
 $color-option-background: #dbe2e8;
-$color-border-interaction: #1a73d9;
+$color-border-interaction: var(--h5p-theme-main-cta-base);
 
 $color-correct-light: #edfff0;
 $color-correct-dark: #6ea776;
