--- a/src/styles/_sizes.scss
+++ b/src/styles/_sizes.scss
@@ -5,7 +5,7 @@ $border-thin-stroke-width: 2px;
 $border-thick-stroke-width: 4px;
 $option-padding-default: 1em;
 $border-stroke-width-difference: $border-thick-stroke-width - $border-thin-stroke-width;
-$option-icon: 2.8em;
+$option-icon: var(--h5p-theme-font-size-xl);
 $minimum-auto-scaling-size: 901px;
 $scaling-interval: 300px;
-$button-size: 4rem;
+$button-size: 3rem;
