fixing the video popup to look like "confirmation dialog"

--- a/src/styles/h5p-multi-media-choice.css
+++ b/src/styles/h5p-multi-media-choice.css
@@ -1,21 +1,21 @@
 /*
 Error: Invalid CSS after "...er-radius: math": expected ";", was ".div($button-si..."
-        on line 208 of C:\Work\New theme CLI\my_first_h5p_environment\libraries\H5P.MultiMediaChoice-0.3\src\styles\h5p-multi-media-choice.scss
+        on line 210 of C:\Work\New theme CLI\my_first_h5p_environment\libraries\H5P.MultiMediaChoice-0.3\src\styles\h5p-multi-media-choice.scss
 
-203:     align-items: center;
-204:     justify-content: center;
-205:     cursor: pointer;
-206:     color: var(--h5p-theme-contrast-cta);
-207:     border: 2px solid var(--h5p-theme-ui-base);
-208:     border-radius: math.div($button-size, 2);
-209: 
-210:     &:hover {
-211:       background-color: var(--h5p-theme-main-cta-light);
-212:     }
-213:     
+205:     align-items: center;
+206:     justify-content: center;
+207:     cursor: pointer;
+208:     color: var(--h5p-theme-contrast-cta);
+209:     border: 2px solid var(--h5p-theme-ui-base);
+210:     border-radius: math.div($button-size, 2);
+211:     padding: var(--h5p-theme-spacing-s);
+212: 
+213:     &:hover {
+214:       background-color: var(--h5p-theme-main-cta-light);
+215:     }
 
 Backtrace:
-C:\Work\New theme CLI\my_first_h5p_environment\libraries\H5P.MultiMediaChoice-0.3\src\styles\h5p-multi-media-choice.scss:208
+C:\Work\New theme CLI\my_first_h5p_environment\libraries\H5P.MultiMediaChoice-0.3\src\styles\h5p-multi-media-choice.scss:210
 C:/Program Files/Adobe/Adobe Dreamweaver 2021/ruby/lib/ruby/gems/3.0.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:1308:in `expected'
 C:/Program Files/Adobe/Adobe Dreamweaver 2021/ruby/lib/ruby/gems/3.0.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:1238:in `expected'
 C:/Program Files/Adobe/Adobe Dreamweaver 2021/ruby/lib/ruby/gems/3.0.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:1233:in `tok!'
@@ -48,4 +48,4 @@ C:/Program Files/Adobe/Adobe Dreamweaver 2021/ruby/bin/sass:23:in `<main>'
 body:before {
   white-space: pre;
   font-family: monospace;
-  content: "Error: Invalid CSS after \"...er-radius: math\": expected \";\", was \".div($button-si...\"\A         on line 208 of C:\Work\New theme CLI\my_first_h5p_environment\libraries\H5P.MultiMediaChoice-0.3\src\styles\h5p-multi-media-choice.scss\A \A 203:     align-items: center;\A 204:     justify-content: center;\A 205:     cursor: pointer;\A 206:     color: var(--h5p-theme-contrast-cta);\A 207:     border: 2px solid var(--h5p-theme-ui-base);\A 208:     border-radius: math.div($button-size, 2);\A 209: \A 210:     &:hover {\A 211:       background-color: var(--h5p-theme-main-cta-light);\A 212:     }\A 213:     "; }
+  content: "Error: Invalid CSS after \"...er-radius: math\": expected \";\", was \".div($button-si...\"\A         on line 210 of C:\Work\New theme CLI\my_first_h5p_environment\libraries\H5P.MultiMediaChoice-0.3\src\styles\h5p-multi-media-choice.scss\A \A 205:     align-items: center;\A 206:     justify-content: center;\A 207:     cursor: pointer;\A 208:     color: var(--h5p-theme-contrast-cta);\A 209:     border: 2px solid var(--h5p-theme-ui-base);\A 210:     border-radius: math.div($button-size, 2);\A 211:     padding: var(--h5p-theme-spacing-s);\A 212: \A 213:     &:hover {\A 214:       background-color: var(--h5p-theme-main-cta-light);\A 215:     }"; }
