--- a/src/styles/h5p-multi-media-choice.scss
+++ b/src/styles/h5p-multi-media-choice.scss
@@ -7,13 +7,15 @@
   padding-bottom: var(--h5p-theme-spacing-s);
 
   .h5p-multi-media-choice-option-list {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(max(210px, calc(100% / var(--max-columns))), 1fr)); // responsive with max columns limit
-    gap: var(--h5p-theme-spacing-m);
+    display: inline-block;
+
+    // Removes <ul> default indentation
     padding: var(--h5p-theme-spacing-m);
     list-style-type: none;
-    margin: 0;
     width: 100%;
+    margin: 0px;
+    position: relative;
+    margin: 0 auto;
   }
 
   .h5p-multi-media-choice-list-item {
@@ -326,7 +328,6 @@
     position: relative;
     background-color: var(--h5p-theme-background);
     padding: var(--h5p-theme-spacing-m);
-    display: flex;
   }
 
   @keyframes animateModal {
