va-734 add margin and padding 0 to center

--- a/src/styles/h5p-multi-media-choice.scss
+++ b/src/styles/h5p-multi-media-choice.scss
@@ -10,14 +10,13 @@
     display: inline-block;
 
     // Removes <ul> default indentation
-    padding: var(--h5p-theme-spacing-m);
+    padding: 0;
     list-style-type: none;
     width: fill-available;
     width: -webkit-fill-available;
     width: -moz-available;
-    margin: 0px;
     position: relative;
-    margin: 0 auto;
+    margin: 0 auto 0 15px; // the 15px compensate the gap
   }
 
   .h5p-multi-media-choice-list-item {
