va-734 comment and cleaning

--- a/src/styles/h5p-multi-media-choice.scss
+++ b/src/styles/h5p-multi-media-choice.scss
@@ -13,8 +13,7 @@
     padding: 0;
     list-style-type: none;
     width: 100%;
-    position: relative;
-    margin-left: 10px;
+    margin-left: 10px; // Half gap of masonry
   }
 
   .h5p-multi-media-choice-list-item {
