--- a/src/styles/h5p-multi-media-choice.scss
+++ b/src/styles/h5p-multi-media-choice.scss
@@ -240,6 +240,11 @@
       line-height: 2rem;
       width: 2rem;
     }
+
+    &:focus {
+      outline: 2px ridge var(--h5p-theme-main-cta-base);
+      outline-offset: 2px;
+    }
   }
 
   .h5p-multi-media-modal {
