VA-1052 make outline 2px white

--- a/src/styles/h5p-multi-media-choice.scss
+++ b/src/styles/h5p-multi-media-choice.scss
@@ -129,6 +129,7 @@
   }
 
   .h5p-multi-media-choice-selected {
+    outline: 2px solid white;
     border-color: $color-border-interaction;
 
     &:hover {
