VA-1110 remove h5p-audio specific margin and font-size (#105)

--- a/src/styles/h5p-multi-media-choice.scss
+++ b/src/styles/h5p-multi-media-choice.scss
@@ -203,8 +203,7 @@
     width: 1px;
   }
 
-  .h5p-multi-media-video-button {
-    font-family: 'H5PFontAwesome4';
+  .h5p-multi-media-video-button, .h5p-audio-minimal-button {
     position: absolute;
     background-color: var(--h5p-theme-main-cta-base);
     z-index: 1;
@@ -233,8 +232,6 @@
     }
 
     &:before {
-      font-family: "h5p-theme";
-      content: "\e91f";
       font-size: 1.25rem;
       height: 2rem;
       line-height: 2rem;
@@ -245,6 +242,11 @@
       outline: 2px ridge var(--h5p-theme-main-cta-base);
       outline-offset: 2px;
     }
+  }
+
+  .h5p-multi-media-video-button::before {
+    font-family: "h5p-theme";
+    content: "\e91f";
   }
 
   .h5p-multi-media-modal {
@@ -370,13 +372,13 @@
 
   .h5p-multi-media-content-audio-wrapper .h5p-audio-inner .h5p-audio-minimal-button {
     color: var(--h5p-theme-contrast-cta);
+    font-size: revert; // Use the default CP font size
   }
 
   .h5p-multi-media-content-audio-wrapper {
     position: absolute;
     bottom: 0;
     right: 0;
-    margin: 0.5em;
     z-index: 1;
 
     .h5p-audio-minimal-button {
