--- a/src/styles/h5p-multi-media-choice.scss
+++ b/src/styles/h5p-multi-media-choice.scss
@@ -39,20 +39,14 @@
   }
 
   .h5p-question-introduction {
-    display: flex;
-    align-items: center;
-    box-shadow: 0px 8px 20px 0px rgba(0, 0, 0, 0.05);
-    border-bottom: 1px solid var(--h5p-theme-stroke-1);
-    padding: var(--h5p-theme-spacing-m);
-    background-color: var(--h5p-theme-ui-base);
-    text-align: left;
-    position: relative;
-    z-index: 1;
+    margin: var(--h5p-theme-spacing-m);
+    font-size: var(--h5p-theme-font-size-xl);
+    color: var(--h5p-theme-text-primary);
+    font-weight: 600;
   }
 
   .h5p-question-introduction p {
     margin: 0px;
-    padding: var(--h5p-theme-spacing-xs) 0;
   }
 
   .h5p-multi-media-choice-option {
