VA-1188 Fix padding between borders

--- a/src/styles/h5p-multi-media-choice.scss
+++ b/src/styles/h5p-multi-media-choice.scss
@@ -16,7 +16,7 @@
   }
 
   .h5p-multi-media-choice-list-item {
-    padding: var(--h5p-theme-spacing-xs) 0 var(--h5p-theme-spacing-xxs) 0;
+    padding: var(--h5p-theme-spacing-s) 0 var(--h5p-theme-spacing-s) 0;
 
     &:focus {
       outline: none;
